@@ -254,7 +254,7 @@ public class AddressLookup implements AddressLookupInterface {
 						NodeList firstValueList = firstElement.getElementsByTagName("Value");
 						Element ValueElement = (Element) firstValueList.item(0);
 						log.log(Level.FINE, "Value: "  + ValueElement.getChildNodes().item(0).getNodeValue().replaceAll("\n","").trim() + " Node: " + i);
-						resultCode = (int) new Integer(ValueElement.getChildNodes().item(0).getNodeValue().replaceAll("\n","").trim());
+						resultCode = (int) Integer.valueOf(ValueElement.getChildNodes().item(0).getNodeValue().replaceAll("\n","").trim());
 					}
 						
 			}
