@@ -125,7 +125,7 @@ public class MCurrency extends X_C_Currency
 	public static MCurrency get (Properties ctx, int C_Currency_ID)
 	{
 		//	Try Cache
-		Integer key = new Integer(C_Currency_ID);
+		Integer key = Integer.valueOf(C_Currency_ID);
 		MCurrency retValue = (MCurrency)s_currencies.get(key);
 		if (retValue != null)
 			return retValue;
