@@ -44,7 +44,7 @@ public class ImpExpUtil {
 			SAXTransformerFactory tf_menu = (SAXTransformerFactory) SAXTransformerFactory.newInstance();
 			//	Default features
 			XMLUtils.setDefaultFeatures(tf_menu);
-			tf_menu.setAttribute("indent-number", new Integer(4));
+			tf_menu.setAttribute("indent-number", Integer.valueOf(4));
 			TransformerHandler packOutDocument = tf_menu.newTransformerHandler();		
 			Transformer serializer_document = packOutDocument.getTransformer();		
 			serializer_document.setOutputProperty(OutputKeys.ENCODING,"ISO-8859-1");		
