@@ -18,6 +18,7 @@ package org.compiere.wf;
 
 import java.awt.Point;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.sql.ResultSet;
 import java.sql.Timestamp;
 import java.util.ArrayList;
@@ -61,7 +62,7 @@ public class MWFNode extends X_AD_WF_Node
 	 */
 	public static MWFNode get (Properties ctx, int AD_WF_Node_ID)
 	{
-		Integer key = new Integer (AD_WF_Node_ID);
+		Integer key = Integer.valueOf(AD_WF_Node_ID);
 		MWFNode retValue = (MWFNode) s_cache.get (key);
 		if (retValue != null)
 			return retValue;
@@ -104,7 +105,7 @@ public class MWFNode extends X_AD_WF_Node
 		}
 		//	Save to Cache
 		if (get_ID() != 0)
-			s_cache.put (new Integer(getAD_WF_Node_ID()), this);
+			s_cache.put (Integer.valueOf(getAD_WF_Node_ID()), this);
 	}	//	MWFNode
 
 	/**
@@ -432,7 +433,7 @@ public class MWFNode extends X_AD_WF_Node
 			return 0;
 		//
 		BigDecimal change = new BigDecimal (seconds)
-			.divide(divide, BigDecimal.ROUND_DOWN)
+			.divide(divide, RoundingMode.DOWN)
 			.multiply(getDynPriorityChange());
 		return change.intValue();
 	}	//	calculateDynamicPriority
