@@ -346,7 +346,7 @@ public class VLocation extends JComponent
 	{
 		if (m_value == null)
 			return null;
-		return new Integer(m_value.getC_Location_ID());
+		return Integer.valueOf(m_value.getC_Location_ID());
 	}	//	getValue
 
 	/**
@@ -408,7 +408,7 @@ public class VLocation extends JComponent
 			int C_Location_ID = 0;
 			if (m_value != null)
 				C_Location_ID = m_value.getC_Location_ID();
-			Integer ii = new Integer(C_Location_ID);
+			Integer ii = Integer.valueOf(C_Location_ID);
 			
 			if (C_Location_ID != 0)
 				fireVetoableChange(m_columnName, oldValue, ii);
