@@ -1678,13 +1678,12 @@ public abstract class Browser {
 												&& DisplayType.Integer != field.getAD_Reference_ID())))
 							data = new IDColumn(no);
 						else if (DisplayType.YesNo == field.getAD_Reference_ID())
-							data = new Boolean("Y".equals(resultSet
-									.getString(colIndex)));
+							data = Boolean.valueOf("Y".equals(resultSet.getString(colIndex)));
 						else if (DisplayType.isDate(field.getAD_Reference_ID()))
 							data = resultSet.getTimestamp(colIndex);
 						else if(DisplayType.isID(field.getAD_Reference_ID())
 								|| DisplayType.Integer == field.getAD_Reference_ID())
-							data = new Integer(resultSet.getInt(colIndex));
+							data = Integer.valueOf(resultSet.getInt(colIndex));
 						else if (DisplayType.isNumeric(field.getAD_Reference_ID()))
 							data = resultSet.getBigDecimal(colIndex);
 						else
