@@ -443,19 +443,19 @@ public class VTreeBOM extends TreeBOM implements FormPanel, ActionListener,
 		DefaultMutableTreeNode parent = new DefaultMutableTreeNode(productSummary(M_Product, false));
 
 		Vector<Object> line = new Vector<Object>(17);
-		line.add( new Boolean(false));  //  0 Select
-		line.add( new Boolean(true));   //  1 IsActive
-		line.add( new Integer(bomline.getLine())); // 2 Line                
+		line.add(Boolean.FALSE);  //  0 Select
+		line.add(Boolean.TRUE);   //  1 IsActive
+		line.add(Integer.valueOf(bomline.getLine())); // 2 Line                
 		line.add( (Timestamp) bomline.getValidFrom()); //  3 ValidDrom
 		line.add( (Timestamp) bomline.getValidTo()); //  4 ValidTo
 		KeyNamePair pp = new KeyNamePair(M_Product.getM_Product_ID(),M_Product.getName());
 		line.add(pp); //  5 M_Product_ID
 		KeyNamePair uom = new KeyNamePair(bomline.getC_UOM_ID(),bomline.getC_UOM().getUOMSymbol());
 		line.add(uom); //  6 C_UOM_ID
-		line.add(new Boolean(bomline.isQtyPercentage())); //  7 IsQtyPorcentage
+		line.add(Boolean.valueOf(bomline.isQtyPercentage())); //  7 IsQtyPorcentage
 		line.add((BigDecimal) bomline.getQtyBatch());  //  8 BatchPercent
 		line.add((BigDecimal) ((bomline.getQtyBOM()!=null) ? bomline.getQtyBOM() : new BigDecimal(0)));  //  9 QtyBOM
-		line.add(new Boolean(bomline.isCritical())); //  10 IsCritical                  
+		line.add(Boolean.valueOf(bomline.isCritical())); //  10 IsCritical                  
 		line.add( (Integer) bomline.getLeadTimeOffset()); // 11 LTOffSet
 		line.add( (BigDecimal) bomline.getAssay()); // 12 Assay
 		line.add( (BigDecimal) (bomline.getScrap())); // 13 Scrap
@@ -492,19 +492,19 @@ public class VTreeBOM extends TreeBOM implements FormPanel, ActionListener,
 			//System.out.println("Componente :" + component.getValue() + "[" + component.getName() + "]");
 			//component(component);
 			Vector<Object> line = new Vector<Object>(17);
-			line.add( new Boolean(false));  //  0 Select
-			line.add( new Boolean(true));   //  1 IsActive
-			line.add( new Integer(bomline.getLine())); // 2 Line                
+			line.add(Boolean.FALSE);  //  0 Select
+			line.add(Boolean.TRUE);   //  1 IsActive
+			line.add(Integer.valueOf(bomline.getLine())); // 2 Line                
 			line.add( (Timestamp) bomline.getValidFrom()); //  3 ValidDrom
 			line.add( (Timestamp) bomline.getValidTo()); //  4 ValidTo
 			KeyNamePair pp = new KeyNamePair(component.getM_Product_ID(),component.getName());
 			line.add(pp); //  5 M_Product_ID
 			KeyNamePair uom = new KeyNamePair(bomline.getC_UOM_ID(),bomline.getC_UOM().getUOMSymbol());
 			line.add(uom); //  6 C_UOM_ID
-			line.add(new Boolean(bomline.isQtyPercentage())); //  7 IsQtyPercentage
+			line.add(Boolean.valueOf(bomline.isQtyPercentage())); //  7 IsQtyPercentage
 			line.add((BigDecimal) bomline.getQtyBatch());  //  8 BatchPercent
 			line.add((BigDecimal) bomline.getQtyBOM());  //  9 QtyBom
-			line.add(new Boolean(bomline.isCritical())); //  10 IsCritical       
+			line.add(Boolean.valueOf(bomline.isCritical())); //  10 IsCritical       
 			line.add( (Integer) bomline.getLeadTimeOffset()); // 11 LTOffSet
 			line.add( (BigDecimal) bomline.getAssay()); // 12 Assay
 			line.add( (BigDecimal) (bomline.getScrap())); // 13 Scrap
