@@ -473,7 +473,7 @@ public class DynamicDashBoard extends DashboardPanel implements EventListener
 						labelList[i - a] = new Label(" ");	
 				} else if (name.equalsIgnoreCase("numeric")) {
 						if ( rs.getString(i) != null )
-							labelList[i - a] = new Label(new Integer(rs.getInt(i)).toString());
+							labelList[i - a] = new Label(Integer.valueOf(rs.getInt(i)).toString());
 						else
 							labelList[i - a] = new Label(" ");
 				} else if (name.equalsIgnoreCase("bpchar")) {
@@ -520,13 +520,13 @@ public class DynamicDashBoard extends DashboardPanel implements EventListener
 	public void onEvent(Event event) throws Exception {
 		Component comp = event.getTarget();
 		Row row = (Row) comp;
-		int recordId = new Integer(row.getId());
+		int recordId = Integer.valueOf(row.getId());
 		MQuery query = new MQuery();
 		query.setZoomValue(recordId);
 		query.setZoomTableName(zoomTableName);
 		query.setZoomColumnName(zoomTableColumnName);
 		query.setRecordCount(1);
-		query.addRestriction(zoomTableColumnName,MQuery.EQUAL, new Integer(recordId));
+		query.addRestriction(zoomTableColumnName,MQuery.EQUAL, Integer.valueOf(recordId));
 		AEnv.zoom(zoomWindowId, query);
 	}
 
