@@ -156,7 +156,7 @@ public class WAssignmentEditor extends WEditor {
 			//	Set Value
 			if (ma != null && ma.getS_ResourceAssignment_ID() != 0)
 			{
-				setValue(new Integer(ma.getS_ResourceAssignment_ID()));
+				setValue(Integer.valueOf(ma.getS_ResourceAssignment_ID()));
 				ValueChangeEvent vce = new ValueChangeEvent(this, gridField.getColumnName(), oldValue, getValue());
 				fireValueChange(vce);
 			}
